Import of ADAMK/PITA-Scheme-0.03 from CPAN.
gitpan-cpan-distribution: PITA-Scheme
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ADAMK/PITA-Scheme-0.03.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension PITA::Scheme
 
+0.03  Mon  2 Jan 2005
+	- Module::Build manual suggests more compatible in more places to
+	  use C<perl Build>/etc than C<./Build>
+	- Incrementing PITA::Report dep
+
 0.02  Mon  2 Jan 2005
 	- Completed what should be the first usable version
 	- Completed Scheme modules for perl5, perl5.make, perl5.build
