--- a/Changes
+++ b/Changes
@@ -1,18 +1,23 @@
 Revision history for Perl extension PITA::Scheme
 
-0.05  Tue  3 Jan 2005
+0.06  Tue  3 Jan 2006
+	- Added the concept of request identifiers, because embedding
+	  that information inside the ResultServer isn't going to work
+	  once we add more functionality and make it a SupportServer.
+
+0.05  Tue  3 Jan 2006
 	- One of the tests need Mobule::Build to be available
 
-0.04  Tue  3 Jan 2005
+0.04  Tue  3 Jan 2006
 	- Accidentally left a Build file in Brian the test dummy.
 	  This was causing test problems
 
-0.03  Mon  2 Jan 2005
+0.03  Mon  2 Jan 2006
 	- Module::Build manual suggests more compatible in more places to
 	  use C<perl Build>/etc than C<./Build>
 	- Incrementing PITA::Report dep
 
-0.02  Mon  2 Jan 2005
+0.02  Mon  2 Jan 2006
 	- Completed what should be the first usable version
 	- Completed Scheme modules for perl5, perl5.make, perl5.build
 	- Should be able to put the results to the server if told where.
