Import of ADAMK/PITA-Scheme-0.08 from CPAN.
gitpan-cpan-distribution: PITA-Scheme
gitpan-cpan-version:      0.08
gitpan-cpan-path:         ADAMK/PITA-Scheme-0.08.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension PITA::Scheme
 
+0.08  Sat  7 Jan 2006
+	- Converted command execution code from flakey IPC::Cmd to the
+	  much saner IPC::Run3.
+
+0.07  ###############
+	- Fixed misspelled method name in Scheme.pm
+
 0.06  Tue  3 Jan 2006
 	- Added the concept of request identifiers, because embedding
 	  that information inside the ResultServer isn't going to work
