Import of ADAMK/PITA-Scheme-0.09 from CPAN.
gitpan-cpan-distribution: PITA-Scheme
gitpan-cpan-version:      0.09
gitpan-cpan-path:         ADAMK/PITA-Scheme-0.09.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension PITA::Scheme
 
+0.09  Mon  9 Jan 2006
+	- Ripped out all the HTTP transfer stuff, as it has been moved
+	  over to PITA-Image.
+	- Take less configuration, only the scheme-specific file.
+	- Requires more constructor arguments.
+
 0.08  Sat  7 Jan 2006
 	- Converted command execution code from flakey IPC::Cmd to the
 	  much saner IPC::Run3.
