--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension PITA::Scheme
 
+0.11  Sun 15 Jan 2006
+	- Added a param validation method _DRIVER($scheme)
+
 0.10  Sat 14 Jan 2006
 	- Converted over to the renamed PITA::XML
 
