--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension PITA::Scheme
 
+0.13  Mon 23 Jan 2006
+	- Make sure we use File::pushd so we don't end up stuck down
+	  some temp directory.
+
 0.12  Sun 22 Jan 2006
 	- Upgrading to properly support the Request ids in PITA-XML 0.15
 
