--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension PITA::Scheme
 
+0.20  Thu  2 Feb 2006
+	- Fixed a minor cleanup issue, we need to undef the pushd earlier
+	- Synchronised version with PITA 0.20 release
+
 0.15  Tue 31 Jan 2006
 	- Completing refactoring for the upcoming PITA 0.20 release
 
