Import of ADAMK/PITA-Scheme-0.29 from CPAN.
gitpan-cpan-distribution: PITA-Scheme
gitpan-cpan-version:      0.29
gitpan-cpan-path:         ADAMK/PITA-Scheme-0.29.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension PITA::Scheme
 
+0.29  Wed 14 Mar 2006
+	- Upgraded to Module::Install 0.60
+	- Upgraded to handle the new XML layout in PITA-XML 0.29
+
 0.20  Thu  2 Feb 2006
 	- Fixed a minor cleanup issue, we need to undef the pushd earlier
 	- Synchronised version with PITA 0.20 release
