--- a/README
+++ b/README
@@ -58,7 +58,7 @@ SUPPORT
     For other issues, contact the author.
 
 AUTHOR
-    Adam Kennedy <cpan@ali.as>, <http://ali.as/>
+    Adam Kennedy <adamk@cpan.org>, <http://ali.as/>
 
 SEE ALSO
     The Perl Image Testing Architecture (<http://ali.as/pita/>)
@@ -66,7 +66,7 @@ SEE ALSO
     PITA, PITA::XML, PITA::Host::ResultServer
 
 COPYRIGHT
-    Copyright 2005 Adam Kennedy. All rights reserved.
+    Copyright 2005 Adam Kennedy.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
