--- a/README
+++ b/README
@@ -66,7 +66,7 @@ SEE ALSO
     PITA, PITA::XML, PITA::Host::ResultServer
 
 COPYRIGHT
-    Copyright 2005 Adam Kennedy.
+    Copyright 2005 - 2008 Adam Kennedy.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
